--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
+        "bootstrap": "^5.2.3",
         "chartjs": "^0.3.24",
         "mui-datatables": "^4.3.0",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.7.2",
+        "react-bootstrap-icons": "^1.10.2",
         "react-chartjs-2": "^5.2.0",
         "react-countdown": "^2.3.5",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.43.2",
+        "react-hook-form": "^7.43.4",
         "react-icons": "^4.7.1",
         "react-modal": "^3.16.1",
         "react-redux": "^8.0.5",
